# stinger-dynograph

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  batch.h  batch_test.cc  benchmark.h  bin_to_el.cc  dynograph.cpp  dynograph_stinger_utils.h  edgelist_dataset.h  main.cpp  pvector.h  range.h  reference_impl.h  reference_impl_test.cc  rmat_dataset.h  stinger_algorithm.cpp  stinger_algorithm.h  stinger_dynograph_test.cc  stinger_graph.cpp  stinger_graph.h  stinger_server.cpp  stinger_server.h
cmake/: FindPAPI.cmake  FindPERFMON.cmake  toolchain-aarch64.cmake
data/: PGPgiantcompo.graph.el  PGPgiantcompo_nodeletions.graph.el  cond-mat-2003.graph.el  cond-mat-2003_nodeletions.graph.el  ny_sandy_nodeletions.graph.el
hooks/: dynograph_edge_count.h
hooks/cmake/: FindPERFMON.cmake
hooks/perf/: perf.h
inc/: hooks.h  stinger.h  stinger_atomics.h  stinger_bench.h  stinger_defs.h  stinger_internal.h  stinger_traversal.h  stinger_vertex.h  x86_full_empty.h  xmalloc.h
lib/: CMakeLists.txt
lib/dynograph_util/: alg_data_manager.cc  alg_data_manager.h  args.cc  args.h  batch.cc  batch.h  benchmark.cc  benchmark.h  dynamic_graph.h  dynograph_impl_test.h  dynograph_util_test.cc  edge.h  edgelist_dataset.cc  helpers.h  idataset.h  logger.h  mpi_macros.h  proxy_dataset.cc  proxy_dataset.h  reference_impl.h  rmat.h  rmat_dataset.cc  rmat_dataset_dump.cc  rmat_dataset_test.cc
lib/dynograph_util/data/: ring-of-cliques.graph.el
lib/dynograph_util/hooks/: .gitignore  CMakeLists.txt  dynograph_edge_count.h  edge_count.c  edge_count.h  hooks.cc  hooks.h  hooks_c.h
lib/dynograph_util/hooks/cmake/: toolchain-alpha.cmake  toolchain-arm.cmake  toolchain-contech.cmake
lib/dynograph_util/hooks/perf/: pfm_cxx.cpp
lib/stinger/: CMakeLists.txt
lib/stinger/lib/stinger_alg/: CMakeLists.txt
lib/stinger/lib/stinger_alg/betweenness/inc/: betweenness.h  dynamic_betweenness.h
lib/stinger/lib/stinger_alg/betweenness/src/: betweenness.c  dynamic_betweenness.cpp
lib/stinger/lib/stinger_alg/bfs/inc/: dynamic_bfs.h
lib/stinger/lib/stinger_alg/bfs/src/: bfs.c  dynamic_bfs.cpp
lib/stinger/lib/stinger_alg/clustering/inc/: dynamic_clustering.h
lib/stinger/lib/stinger_alg/clustering/src/: dynamic_clustering.cpp
lib/stinger/lib/stinger_alg/common/inc/: streaming_algorithm.h
lib/stinger/lib/stinger_alg/pagerank/src/: dynamic_pagerank.cpp
lib/stinger/lib/stinger_alg/pagerank_updating/inc/: dynamic_pagerank_updating.h
lib/stinger/lib/stinger_alg/pagerank_updating/src/: dynamic_pagerank_updating.cpp  pagerank_updating.c
lib/stinger/lib/stinger_alg/simple_communities/inc/: community-update.h  dynamic_simple_communities.h  dynamic_simple_communities_updating.h
lib/stinger/lib/stinger_alg/simple_communities/src/: community-update.c  community.c  dynamic_simple_communities.cpp  dynamic_simple_communities_updating.cpp  graph-el.c
lib/stinger/lib/stinger_alg/static_components/inc/: dynamic_static_components.h
lib/stinger/lib/stinger_alg/static_components/src/: dynamic_static_components.cpp
lib/stinger/lib/stinger_alg/streaming_connected_components/inc/: dynamic_streaming_connected_components.h
lib/stinger/lib/stinger_alg/streaming_connected_components/src/: dynamic_streaming_connected_components.cpp
lib/stinger/lib/stinger_core/inc/: stinger_traversal.h
lib/stinger/lib/stinger_core/src/: stinger.c
lib/stinger/lib/stinger_net/: CMakeLists.txt
lib/stinger/lib/stinger_net/inc/: stinger_alg.h
lib/stinger/src/clients/algorithms/: CMakeLists.txt
lib/stinger/src/clients/algorithms/betweenness/src/: betweenness.cpp
lib/stinger/src/clients/algorithms/pagerank/src/: pagerank.cpp
lib/stinger/src/clients/algorithms/simple_communities/src/: simple_communities_updating.cpp
lib/stinger/src/tests/streaming_connected_components_test/: scc_test.h
lib/stinger_alg/: CMakeLists.txt
lib/stinger_alg/betweenness/inc/: betweenness.h
lib/stinger_alg/inc/: betweenness.h  bfs.h  clustering.h  kcore.h  pagerank.h  static_components.h  weakly_connected_components.h
lib/stinger_alg/kcore/inc/: dynamic_kcore.h
lib/stinger_alg/kcore/src/: dynamic_kcore.cpp
lib/stinger_alg/pagerank/inc/: dynamic_pagerank.h
lib/stinger_alg/simple_communities/inc/: community.h  graph-el.h
lib/stinger_alg/simple_communities/src/: sorts.c
lib/stinger_alg/src/: betweenness.c  bfs.c  clustering.c  kcore.c  pagerank.c  static_components.c  weakly_connected_components.c
lib/stinger_core/: CMakeLists.txt
lib/stinger_core/inc/: stinger_batch_insert.h  stinger_defs.h  stinger_defs.h.old  stinger_traversal.h
lib/stinger_core/src/: stinger.c  stinger_load.c  stinger_vertex.c
lib/stinger_net/inc/: stinger_alg_client.h
lib/stinger_net/src/: stinger_alg_client.cpp
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/benchmarks/inc/: dynograph_util.h  hooks.h  perf.h  pfm_cxx.cpp  pfm_cxx.h  stinger_bench.h
src/benchmarks/src/: adamic_adar.c  betweenness.c  bfs.c  bfs_direction_optimizing.c  clustering.c  components.c  dynograph.c  dynograph.cpp  dynograph_util.c  hooks.c  hooks.cpp  kcore.c  pagerank.c  pfm_cxx.cpp  stinger_bench.c
src/bfs/: main.c
src/bfs_direction_optimizing/: main.c
src/clients/algorithms/clustering_coefficients/src/: clustering.cpp
src/clients/algorithms/kcore/src/: kcore.cpp
src/clients/algorithms/simple_communities/src/: simple_communities.cpp
src/clients/algorithms/static_components/src/: static_components.cpp
src/clients/algorithms/streaming_connected_components/src/: main.cpp
src/clients/algorithms/test_alg/src/: test_alg.cpp
src/components/: main.c
src/convert_raw/: main.c
src/edge_stream/: main.c
src/lib/: core_util.c  hooks.c  stinger.c  stinger_load.c  stinger_vertex.c  x86_full_empty.c  xmalloc.c
src/pagerank/: main.c
src/util/: CMakeLists.txt  convert_raw.c  converter.c  prepare_graph.py
